--- a/package.json
+++ b/package.json
@@ -4,17 +4,13 @@
     "start": "cd packages/storybook && npm start",
     "bootstrap": "lerna bootstrap",
     "docs": "doc-component './components/**/lib/index.js' './API.md'",
-    "docs:components": "lerna run docs --parallel",
+    "docs:components": "npm run docs --workspaces",
     "eslint": "eslint \"./{components,packages}/*/src/**/*.js\"",
     "eslint:fix": "eslint --fix \"./{components,packages}/*/src/**/*.js\"",
-    "build": "lerna run build --parallel",
-    "build:sync": "lerna run build",
-    "build:lib": "lerna run build:lib --parallel",
-    "build:es": "lerna run build:es --parallel",
+    "build": "npm run build --workspaces",
+    "build:lib": "npm run build:lib --workspaces",
+    "build:es": "npm run build:es --workspaces",
     "build:dist": "yarn build:es && rimraf dist && webpack -p packages/govuk-react/es/index.js --devtool source-map --output-filename index.js",
-    "watch": "yarn watch:lib",
-    "watch:es": "cross-env BABEL_ENV=es lerna exec --ignore @govuk-react/images --parallel -- babel src -d es -w --source-maps",
-    "watch:lib": "lerna exec --ignore @govuk-react/images --parallel -- babel src -d lib -w --source-maps",
     "clean": "rimraf lib && rimraf es",
     "bundlesize": "bundlesize",
     "test": "cross-env CI=true yarn test:unit && yarn eslint",
