--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "build": "npm run build --workspaces",
     "build:lib": "npm run build:lib --workspaces",
     "build:es": "npm run build:es --workspaces",
-    "build:dist": "yarn build:es && rimraf dist && webpack -p packages/govuk-react/es/index.js --devtool source-map --output-filename index.js",
+    "build:dist": "npm run build:es && rimraf dist && webpack -p packages/govuk-react/es/index.js --devtool source-map --output-filename index.js",
     "clean": "rimraf lib && rimraf es",
     "bundlesize": "bundlesize",
-    "test": "cross-env CI=true yarn test:unit && yarn eslint",
+    "test": "cross-env CI=true npm run test:unit && npm run eslint",
     "test:unit": "jest",
     "test:debug": "node --inspect-brk ./node_modules/.bin/jest --runInBand",
-    "test:snapshot": "yarn test:unit -u",
+    "test:snapshot": "npm run test:unit -u",
     "create-component": "node ./scripts/createComponent.js",
-    "build:storybook": "cd packages/storybook && yarn build"
+    "build:storybook": "cd packages/storybook && npm run build"
   },
   "description": "A port of the govuk-frontend components for React using styled-components.",
   "main": "lib/index.js",
@@ -80,7 +80,6 @@
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.4",
     "jest-transform-stub": "^2.0.0",
-    "lerna": "2.11",
     "mkdirp-promise": "^5.0.1",
     "prettier": "^2.3.0",
     "prop-types": "^15.6.0",
