--- a/packages/govuk-react/package.json
+++ b/packages/govuk-react/package.json
@@ -64,7 +64,7 @@
     "styled-components": ">=5.1"
   },
   "scripts": {
-    "build": "yarn build:lib && yarn build:es && yarn copy-readme",
+    "build": "npm run build:lib && npm run build:es && npm run copy-readme",
     "build:lib": "rimraf lib && babel src -d lib --source-maps --config-file ../../babel.config.js",
     "build:es": "rimraf es && cross-env BABEL_ENV=es babel src -d es --source-maps --config-file ../../babel.config.js",
     "copy-readme": "cp ../../README.md ."
